# koferta

./: .coveralls.yml  .gitignore  .travis.yml  AddConditionDialog.cpp  AddConditionDialog.h  AddConditionDialog.ui  CMakeLists.txt  CustomerEdit.cpp  CustomerEdit.h  CustomerEdit.ui  CustomerNew.cpp  CustomerNew.h  CustomerSearch.cpp  CustomerSelection.cpp  CustomerSelection.h  CustomerSelection.ui  Database.cpp  Database.h  EdycjaKlienta.cpp  EdycjaKlienta.h  EdycjaKlienta.ui  EdycjaKombo.cpp  EdycjaKombo.h  EdycjaKombo.ui  EdycjaTowaru.cpp  EdycjaTowaru.cpp.autosave  EdycjaTowaru.h  EdycjaTowaru.ui  EdycjaTowaru.ui.autosave  LoadDialog.cpp  LoadDialog.h  LoadDialog.ui  LoadDialogMerchandiseListModel.cpp  LoadDialogMerchandiseListModel.h  LoadDialogMerchandiseListModelMySQL.cpp  LoadDialogMerchandiseListModelMySQL.h  Logger.cpp  Logger.h  LoginDialog.cpp  LoginDialog.h  (+103 more)
.circleci/: config.yml
Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
MainWindow/: AddConditionDialog.cpp  AddConditionDialog.h  CMakeLists.txt  Client.cpp  Client.h  Customer.cpp  Customer.h  CustomerEdit.cpp  CustomerEdit.h  CustomerNew.cpp  CustomerSearch.cpp  CustomerSearch.h  CustomerSelection.cpp  CustomerSelection.h  Database.cpp  Database.h  DatabaseHelpers.cpp  DatabaseHelpers.hpp  LoadDialog.cpp  LoadDialog.h  LoadDialogMerchandiseListModel.cpp  LoadDialogMerchandiseListModel.h  Logger.cpp  Logger.h  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MerchandiseListModel.cpp  MerchandiseListModel.h  MerchandiseListView.cpp  MerchandiseSearch.cpp  MerchandiseSelection.cpp  MerchandiseSelection.h  MerchandiseSelectionModel.cpp  Offer.cpp  Offer.h  OfferSearch.cpp  (+13 more)
MainWindow/res/: aliaxis.jpe  zasoby.qrc
MainWindow/translations/: kOferta_de.ts
database/: test_database_ddl.sql
database_scripts/: local.sh  run_db.sh  test_database_ddl.sql
dbTools/: ca-cert.pem  dbTools  dbTools.pro  foo.cpp  foo.h  main.cpp  zasoby.qrc
features/: e2e.feature  initialization.feature
features/step_definitions/: kofertaSteps.cpp  kofertaSteps.h
forms/: AddConditionDialog.ui  CustomerEdit.ui  CustomerNew.ui  CustomerSelection.ui  LoadDialog.ui  LoginDialog.ui  MainWindow.ui
include/: AddConditionDialog.hpp  Customer.hpp  CustomerEdit.hpp  CustomerSearch.h  CustomerSearch.hpp  CustomerSelection.h  CustomerSelection.hpp  Database.h  Database.hpp  DatabaseHelpers.hpp  LoadDialog.h  LoadDialogMerchandiseListModel.h  LoadDialogMerchandiseListModel.hpp  Logger.hpp  LoginDialog.hpp  MainWindow.hpp  Merchandise.hpp  MerchandiseListDelegate.h  MerchandiseListModel.hpp  MerchandiseListView.hpp  MerchandiseSearchModel.hpp  MerchandiseSelection.hpp  MerchandiseSelectionModel.h  MerchandiseSelectionModel.hpp  Offer.hpp  OfferSearch.hpp  OfferSearchModel.hpp  TermItem.h  TermItem.hpp  TermModel.hpp  TermsChooserDialog.hpp  User.hpp
includes/: Database.h  EdycjaKlienta.h  EdycjaTowaru.h  LoadDialog.h  Logowanie.h  Macros.h  MainWindow.h  NowyKlient.h  NowyUser.h  RootDialog.h  SHA1.h  User.h  WyborKlienta.h  WyborTowaru.h  Wydruk.h
old/: WyborTowaru.cpp  WyborTowaru.h  WyborTowaru.ui
res/: LICENSE  SHA1_LICENSE  about.odt  ca-cert.pem  cacert.pem  client-cert.pem  client-key.pem  client-req.pem  zasoby.qrc
resources/: icon.rc
src/: AddConditionDialog.cpp  CMakeLists.txt  Customer.cpp  CustomerEdit.cpp  CustomerNew.cpp  CustomerSearch.cpp  CustomerSelection.cpp  Database.cpp  DatabaseHelpers.cpp  EdycjaKlienta.cpp  EdycjaTowaru.cpp  LoadDialog.cpp  LoadDialogMerchandiseListModel.cpp  Logger.cpp  LoginDialog.cpp  Logowanie.cpp  Main.cpp  MainWindow.cpp  Merchandise.cpp  MerchandiseListDelegate.cpp  MerchandiseListModel.cpp  MerchandiseListView.cpp  MerchandiseNew.cpp  MerchandiseSearch.cpp  MerchandiseSearchModel.cpp  MerchandiseSelection.cpp  MerchandiseSelectionModel.cpp  MerchendiseSelectionDelegate.cpp  NowyKlient.cpp  Offer.cpp  OfferSearch.cpp  OfferSearchModel.cpp  RootDialog.cpp  SHA1.cpp  SyntaxKlient.cpp  TermItem.cpp  TermModel.cpp  TermsChooserDialog.cpp  User.cpp  WyborKlienta.cpp  (+4 more)
src/MainWindow/: Baza.cpp  MainWindow.cpp  Oferta.cpp
src/marszruta/: Makefile  Makefile.Debug  Makefile.Release  marszruta.cpp  marszruta.h  marszruta.pri  marszruta.pro  marszrutaPlugin.cpp  marszrutaPlugin.h
src/marszruta/debug/: moc_marszruta.cpp  moc_marszrutaPlugin.cpp  qrc_icons.cpp
tests/: CMakeLists.txt  DatabaseTest.cpp  database.cpp  database_basic.cpp
translations/: kOferta_de.ts  kOferta_en.ts  kOferta_pl.ts
ui/: CustomerEdit.ui  EdycjaKlienta.ui  EdycjaTowaru.ui  LoadDialog.ui  Logowanie.ui  MerchandiseNew.ui  NowyKlient.ui  RootDialog.ui  SyntaxTowar.ui  WyborKlienta.ui  WyborTowaru.ui  mainwindow.ui
